Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63722

Slow Requests Using HTTP2

    XMLWordPrintable

Details

    • a520c179b89610248ef97f614d6b831ccee54c6b

    Description

      I recently switched to using HTTP2 in my application by setting the QNetworkRequest HTTP2AllowedAttribute to True for all my requests. I immediately noticed some of my downloads were going way slower than normal.

      I have been using 5.10 Alpha for the OpenSSL 1.1.x support and ran the following tests:

      My home connection DL Speed: 175 Mbit/s
      Test URLs for both HTTP/HTTPs (Note from tipochep: url with 'http' scheme and HTTP/2 == true shows 175 Mbit/s because the server ignores protocol upgrade and it's essentially HTTP/1.1)

      http://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/jquery-speedtest/100MB.txt

      https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/jquery-speedtest/100MB.txt

      Results:

      http URL w/ HTTP2AllowedAttribute = False: 175 Mbit/s
      http URL w/ HTTP2AllowedAttribute = True : 175 Mbit/s (ProtocolFailure in 5.9, but fixed in 5.10)
      https URL w/ HTTP2AllowedAttribute = False: 175 Mbit/s
      https URL w/ HTTP2AllowedAttribute = True: ~7-8 Mbit/s

      So the issue happens when using TLS/SSL AND the HTTP2AllowedAttribute set to True

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            wallboy Adam W
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes